--- a/homework.html
+++ b/homework.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <p><h1>This is my new repository</h1></p>
+
+<p>The central repository has two main branches with unlimited lifetime.</p>
 </body>
 </html>
